# image-definitions

./: .envrc  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml  unified-config.yml
.github/workflows/: ci.yml
k8s/: 01-namespace.yaml  02-configmap.yaml  03-pvc.yaml  04-deployment.yaml  05-service.yaml  06-ingress.yaml  07-postgres.yaml
migrations/: env.py
migrations/versions/: 4b684a6f0efd_initial_migration.py
scripts/: bootstrap.py  dev.py  generate_client.py
src/image_definitions/: __init__.py  cli.py  main.py
src/image_definitions/api/: architectures.py  artifacts.py  product_groups.py  products.py  variants.py
src/image_definitions/core/: __init__.py  config.py  database.py
src/image_definitions/models/: __init__.py  architecture.py  artifact.py  base.py  product.py  product_group.py  variant.py
src/image_definitions/schemas/: __init__.py  architecture.py  artifact.py  product.py  product_group.py  variant.py
static/: app.js  index.html  style.css
tests/: conftest.py  test_api.py
